# krules-framework

./: .gitignore  ADVANCED_PATTERNS.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CORE_CONCEPTS.md  Dockerfile.wheels  INTEGRATIONS.md  MIDDLEWARE.md  MIGRATION.md  QUICKSTART.md  README.md  STORAGE_BACKENDS.md  TESTING.md  build_wheels.sh  pyproject.toml  tasks.py
docs/: ADVANCED_PATTERNS.md  API_REFERENCE.md  ASYNC_IN_SYNC.md  CONTAINER_DI.md  CORE_CONCEPTS.md  DOCUMENTATION_OUTLINE.md  EVENT_HANDLERS.md  INTEGRATIONS.md  MIDDLEWARE.md  MIGRATION.md  MIGRATION_V3.md  QUICKSTART.md  SHELL_MODE.md  STORAGE_BACKENDS.md  SUBJECTS.md  TESTING.md
examples/: krules_showcase.ipynb
krules_cloudevents/: README.md
krules_cloudevents_pubsub/: README.md  middleware.py  subscriber.py
krules_core/: __init__.py  container.py  providers.py  settings.py
krules_core/subject/: storaged_subject.py
krules_fastapi_env/: README.md
krules_pubsub/: README.md
postgres_subjects_storage/: README.md
redis_subjects_storage/: README.md
tests/: manual_pubsub_test.py  simple_pubsub_test.py
tests/test_cloudevents/: conftest.py  test_dispatcher.py  test_integration.py  test_middleware.py  test_publisher.py
tests/test_cloudevents_pubsub/: conftest.py  test_integration.py  test_publisher.py  test_subscriber.py
tests/test_core/: __init__.py  test_argprocessors.py  test_core.py  test_router.py
tests/test_core_v2/: __init__.py  test_container.py  test_event_bus.py  test_event_context.py  test_event_types.py  test_settings.py  test_subject_flush.py
tests/test_modern/: __init__.py  (+1 more)
(+21 files in other folders)
